Avance en correccion de errores #5